# GameAnimationProgramming

./: CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md
cmake/: FindAssimp.cmake
cmake_vma/: Findvma.cmake
model/: AssimpAnimChannel.cpp  AssimpAnimChannel.h  AssimpAnimClip.cpp  AssimpAnimClip.h  AssimpInstance.cpp  AssimpInstance.h  AssimpMesh.cpp  AssimpModel.cpp  AssimpModel.h  AssimpSettingsContainer.cpp  AssimpSettingsContainer.h  InstanceSettings.h  Model.cpp  Model.h  ModelAndInstanceData.h
renderer/: VkRenderer.cpp  VkRenderer.h
renderer/backend/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  PipelineLayout.cpp  PipelineLayout.h  Renderpass.cpp  Renderpass.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  SkinningPipeline.cpp  SkinningPipeline.h  SyncObject.h  SyncObjects.cpp  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h  VkRenderData.h
shaders/: assimp.frag.spv  assimp.vert  assimp.vert.spv  assimp_inst_mat_mul.comp.spv  assimp_inst_transform.comp.spv  assimp_skinning.frag  assimp_skinning.frag.spv  assimp_skinning.vert  assimp_skinning.vert.spv
tests/: CMakeLists.txt  InputManagerMultithreadingStressTest.cpp
tools/: Camera.cpp  Camera.h  CircularBuffer.cpp  CircularBuffer.h  Delegate.h  Input.cpp  Input.h  MemorySize.h
window-app/: WindowApp.cpp  WindowApp.h
